--- a/package.json
+++ b/package.json
@@ -18,14 +18,16 @@
     "prejshint": "gulp",
     "jshint": "jshint .",
     "pretest": "npm run jshint",
-    "test": "mocha"
+    "test": "mocha",
+    "postinstall": "gulp",
+    "prod": "node server"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/swagger-api/swagger-ui.git"
   },
   "readmeFilename": "README.md",
-  "devDependencies": {
+  "dependencies": {
     "chai": "^2.1.0",
     "cors": "^2.5.3",
     "docco": "^0.7.0",
@@ -45,11 +47,15 @@
     "gulp-uglify": "^1.1.0",
     "gulp-watch": "^4.1.1",
     "gulp-wrap": "^0.11.0",
+    "harp": "^0.17.0",
     "http-server": "git+https://github.com/nodeapps/http-server.git",
     "jshint-stylish": "^1.0.1",
     "less": "^2.4.0",
     "mocha": "^2.1.0",
     "selenium-webdriver": "^2.45.0",
     "swagger-client": "2.1.1"
+  },
+  "engines": {
+    "iojs": "^1.7.0"
   }
 }
